adapt: tests